--- a/BeardedSpice/Preferences/BSStrategiesPreferencesViewController.xib
+++ b/BeardedSpice/Preferences/BSStrategiesPreferencesViewController.xib
@@ -21,16 +21,16 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView translatesAutoresizingMaskIntoConstraints="NO" id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="572"/>
+            <rect key="frame" x="0.0" y="0.0" width="540" height="572"/>
             <subviews>
                 <box boxType="custom" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="6sh-qZ-67o">
-                    <rect key="frame" x="44" y="476" width="412" height="28"/>
+                    <rect key="frame" x="44" y="476" width="452" height="28"/>
                     <view key="contentView" id="j1h-rB-gJg">
-                        <rect key="frame" x="1" y="1" width="410" height="26"/>
+                        <rect key="frame" x="1" y="1" width="450" height="26"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchField wantsLayer="YES" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4J-Ni-CcF">
-                                <rect key="frame" x="20" y="2" width="370" height="22"/>
+                                <rect key="frame" x="20" y="2" width="410" height="22"/>
                                 <searchFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Filter" usesSingleLineMode="YES" bezelStyle="round" id="I4q-01-DtP">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -55,13 +55,13 @@
                     <color key="fillColor" name="alternatingContentBackgroundColor" catalog="System" colorSpace="catalog"/>
                 </box>
                 <scrollView horizontalCompressionResistancePriority="1000" horizontalLineScroll="17" horizontalPageScroll="10" verticalLineScroll="17" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k1v-BS-YGw">
-                    <rect key="frame" x="44" y="277" width="412" height="200"/>
+                    <rect key="frame" x="44" y="277" width="452" height="200"/>
                     <clipView key="contentView" id="kCd-gv-NCo">
-                        <rect key="frame" x="1" y="1" width="410" height="198"/>
+                        <rect key="frame" x="1" y="1" width="450" height="198"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" alternatingRowBackgroundColors="YES" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" rowSizeStyle="automatic" viewBased="YES" id="GEG-vL-atM" userLabel="Strategies View">
-                                <rect key="frame" x="0.0" y="0.0" width="410" height="198"/>
+                                <rect key="frame" x="0.0" y="0.0" width="450" height="198"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="4" height="0.0"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -78,7 +78,7 @@
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </tableColumn>
-                                    <tableColumn identifier="name" editable="NO" width="350" minWidth="262" maxWidth="350" id="yy8-Wa-ZAL">
+                                    <tableColumn identifier="name" editable="NO" width="322" minWidth="262" maxWidth="350" id="yy8-Wa-ZAL">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Name">
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" white="0.33333298560000002" alpha="1" colorSpace="calibratedWhite"/>
@@ -117,7 +117,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="Km1-dq-voD">
-                        <rect key="frame" x="395" y="1" width="16" height="198"/>
+                        <rect key="frame" x="435" y="1" width="16" height="198"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                 </scrollView>
@@ -192,10 +192,10 @@
                     </connections>
                 </button>
                 <box verticalHuggingPriority="750" boxType="separator" translatesAutoresizingMaskIntoConstraints="NO" id="23b-fP-Ezk">
-                    <rect key="frame" x="44" y="216" width="412" height="5"/>
+                    <rect key="frame" x="44" y="216" width="452" height="5"/>
                 </box>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fjg-NH-wSr">
-                    <rect key="frame" x="42" y="512" width="416" height="16"/>
+                    <rect key="frame" x="42" y="512" width="456" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Strategies" id="QYW-RP-zCg">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -203,7 +203,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="aXe-az-lao">
-                    <rect key="frame" x="42" y="168" width="416" height="16"/>
+                    <rect key="frame" x="42" y="168" width="456" height="16"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Unsupported Web Strategies" id="7rn-dn-OWt">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -211,7 +211,7 @@
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="T8N-QI-74V">
-                    <rect key="frame" x="373" y="89" width="90" height="32"/>
+                    <rect key="frame" x="413" y="89" width="90" height="32"/>
                     <buttonCell key="cell" type="push" title="Update..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="EPy-uh-3oI">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -229,7 +229,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZBN-kw-Mtm">
-                    <rect key="frame" x="42" y="132" width="416" height="28"/>
+                    <rect key="frame" x="42" y="132" width="456" height="28"/>
                     <textFieldCell key="cell" controlSize="small" title="You can retrieve strategies from the [repository of unsupported strategies]. There are two options." id="reD-q5-Mmp">
                         <font key="font" metaFont="message" size="11"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -237,7 +237,7 @@
                     </textFieldCell>
                 </textField>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="2wU-ff-jgv">
-                    <rect key="frame" x="42" y="88" width="332" height="28"/>
+                    <rect key="frame" x="42" y="88" width="372" height="28"/>
                     <textFieldCell key="cell" controlSize="small" title="Get new or larger versions of the strategy, and save them as custom. Click &quot;Update...&quot; for this. " id="onz-5L-sOg">
                         <font key="font" metaFont="message" size="11"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -245,7 +245,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LEb-ju-XRp">
-                    <rect key="frame" x="42" y="44" width="332" height="28"/>
+                    <rect key="frame" x="42" y="44" width="372" height="28"/>
                     <textFieldCell key="cell" controlSize="small" title="Download all strategies to the selected folder on disk. Click &quot;Download...&quot; for this." id="ciK-hg-JNv">
                         <font key="font" metaFont="message" size="11"/>
                         <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
@@ -253,7 +253,7 @@
                     </textFieldCell>
                 </textField>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0qD-Zm-cZB">
-                    <rect key="frame" x="373" y="45" width="90" height="32"/>
+                    <rect key="frame" x="413" y="45" width="90" height="32"/>
                     <buttonCell key="cell" type="push" title="Download..." bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="iRR-g1-HIg">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -294,7 +294,6 @@
                 <constraint firstItem="0qD-Zm-cZB" firstAttribute="leading" secondItem="LEb-ju-XRp" secondAttribute="trailing" constant="8" id="RYx-xf-vvF"/>
                 <constraint firstItem="0qD-Zm-cZB" firstAttribute="top" secondItem="LEb-ju-XRp" secondAttribute="top" id="YVe-hJ-N7W"/>
                 <constraint firstItem="ZBN-kw-Mtm" firstAttribute="top" secondItem="aXe-az-lao" secondAttribute="bottom" constant="8" id="ZMV-ku-5e0"/>
-                <constraint firstAttribute="width" constant="500" id="cJA-PJ-rLf"/>
                 <constraint firstItem="k1v-BS-YGw" firstAttribute="trailing" secondItem="fjg-NH-wSr" secondAttribute="trailing" id="ciP-vq-gc2"/>
                 <constraint firstItem="23b-fP-Ezk" firstAttribute="trailing" secondItem="fjg-NH-wSr" secondAttribute="trailing" id="exF-b7-L4B"/>
                 <constraint firstItem="0qD-Zm-cZB" firstAttribute="width" secondItem="T8N-QI-74V" secondAttribute="width" id="fCk-NO-vW7"/>
@@ -302,6 +301,7 @@
                 <constraint firstItem="k1v-BS-YGw" firstAttribute="top" secondItem="6sh-qZ-67o" secondAttribute="bottom" constant="-1" id="fss-4J-kou"/>
                 <constraint firstItem="aXe-az-lao" firstAttribute="trailing" secondItem="fjg-NH-wSr" secondAttribute="trailing" id="h6o-8e-jTZ"/>
                 <constraint firstItem="2wU-ff-jgv" firstAttribute="top" secondItem="ZBN-kw-Mtm" secondAttribute="bottom" constant="16" id="kZJ-Vc-btf"/>
+                <constraint firstAttribute="width" constant="540" id="khD-25-Tha"/>
                 <constraint firstItem="T8N-QI-74V" firstAttribute="leading" secondItem="2wU-ff-jgv" secondAttribute="trailing" constant="8" id="mxj-yX-4w5"/>
                 <constraint firstItem="k1v-BS-YGw" firstAttribute="leading" secondItem="fjg-NH-wSr" secondAttribute="leading" id="oF9-Oi-IDt"/>
                 <constraint firstItem="aXe-az-lao" firstAttribute="top" secondItem="23b-fP-Ezk" secondAttribute="bottom" constant="34" id="sSC-62-IFa"/>
@@ -310,7 +310,7 @@
                 <constraint firstItem="fjg-NH-wSr" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="44" id="zaT-BE-CKz"/>
                 <constraint firstItem="ZBN-kw-Mtm" firstAttribute="trailing" secondItem="aXe-az-lao" secondAttribute="trailing" id="zqc-pg-DZN"/>
             </constraints>
-            <point key="canvasLocation" x="227" y="287"/>
+            <point key="canvasLocation" x="-58" y="199"/>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="5i6-vh-4jl"/>
     </objects>
